style: header background

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>TOP 6</h1>
+    <header>
+        <h1>TOP 6 </h1>
+    </header>
     
     <div class="pretendente surpresa">
         <h2>Pretendente Surpresa</h2>
